# Movie-Tracker

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.ts  updates.json  vite.config.ts.timestamp-1771751501085-948b2b836c9e18.mjs
.github/workflows/: release.yml
.lovable/: plan.md
.trash/: ROADMAP.md
docs/: PROJECT_STRUCTURE.md  movie-data.json  series-data.json
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: AppLayout.tsx  BottomNav.tsx  EpisodeRatingGrid.tsx  ImportExportButton.tsx  MovieDetailView.tsx  NetflixCard.tsx  RatingBadge.tsx  SeriesDetailView.tsx  TitleBar.tsx  UpdateButton.tsx  UpdateNotification.tsx  WatchlistButton.tsx
src/hooks/: use-accent-color.ts  use-nav-settings.ts  use-online-status.ts  useKeyboardShortcuts.ts
src/lib/: api.ts  changelog.ts  collection.ts  dataManager.ts  openExternal.ts  tmdb.ts  updater.ts  watchProgress.ts  watchlist.ts
src/pages/: AnalyticsPage.tsx  BrowsePage.tsx  CalendarPage.tsx  HomePage.tsx  MoviesPage.tsx  SeriesPage.tsx  SettingsPage.tsx  VaultPage.tsx  WatchlistPage.tsx
supabase/functions/ai-recommendations/: index.ts
